--- a/modulo3/node-js/express/index.html
+++ b/modulo3/node-js/express/index.html
@@ -8,7 +8,7 @@
 <body>
   <h1>Sube un Archivo</h1>
   <form action="/upload" method="POST" enctype="multipart/form-data">
-    <input id="file" type="file" name="file" required>
+    <input title="file" id="file" type="file" name="file" required>
     <button type="submit">Cargar</button>
   </form>
 </body>
